# aion

./: .dockerignore  .gitattributes  .gitignore  AION_Enterprise_Sales_Package.docx  AION_Enterprise_Sales_Package.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Noah Peitz, R Skript .R  OPEN_CORE_ENTERPRISE_BOOTSTRAP.patch  README.md  README_DEPLOY.md  RELEASE.md  SECURITY.md  SealRun_Enterprise_Sales_Package.html  TRACE_SPEC.md  docker-compose.demo.yml  requirements-dev.txt
aion/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GIT_INSTRUCTIONS.md  LICENSE  README.md
aion/core/: Cargo.toml
aion/core/src/: capsule.rs  contracts.rs  determinism_contract.rs  determinism_matrix.rs  error.rs  evidence.rs  identity.rs  lib.rs  os_contract.rs
aion/crates/aion-cli/: Cargo.toml
aion/docs/: LICENSE  architecture.md  capsules.md  compatibility-matrix.md  developer-guide.md  drift.md  migration.md  operations-guide.md  os_contract_spec.md  overview.md  pricing.md  replay.md  roadmap.md  security-guide.md  why-graph.md
aion/docs/enterprise/: AION_Enterprise_Sales_Package.md
aion/docs/executive/: aion_in_5_minutes.md
aion/docs/launch/: hacker_news_show_hn.md  marketing_plan.md
aion/engine/: Cargo.toml
aion/engine/src/: ai.rs  capture.rs  ci.rs  drift.rs  governance.rs  graph.rs  lib.rs  output.rs  replay.rs  sdk.rs  why.rs
aion/examples/: README.md
aion/kernel/: Cargo.toml
aion/kernel/src/: env.rs  envelope.rs  execute.rs  fs.rs  integrity.rs  lib.rs  network.rs  random.rs  time.rs
aion/scripts/: README.md
aion/src/: lib.rs  main.rs
aion/src/cli/: error.rs  mod.rs  registry.rs  router.rs
aion/tests/: README.md  smoke.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/aion/: __init__.py  __main__.py  api.py  c_abi.py  errors.py  version.py
bindings/python/ctypes/: aion_ctypes.py
bindings/python/examples/: 01_execute_capsule.py  02_replay_capsule.py  03_drift_analysis.py  04_why_graph.py  05_governance_validate.py  demo_capsule_1.json
bindings/python/notebooks/: AION_Pilot_Demo.ipynb  pilot_demo.ipynb
bindings/python/src/: lib.rs
bindings/python/tests/: python_bindings_test.py  test_pilot_api.py
core/: Cargo.toml
core/src/: admin_docs_contract.rs  api_stability_contract.rs  audit_report_contract.rs  capsule.rs  capsule_abi_contract.rs  chaos_contract.rs  cli_stability_contract.rs  compatibility_test_contract.rs  compliance_contract.rs  contract_stability.rs  contracts.rs  determinism_contract.rs  determinism_matrix.rs  distribution_contract.rs  distribution_model.rs  dr_contract.rs  error.rs  evidence_export_contract.rs  fuzz_property_contract.rs  golden_path_contract.rs  governance_model.rs  identity.rs  identity_matrix.rs  incident_contract.rs  installer_trust_chain.rs  kpi_contract.rs  legal_determinism_contract.rs  lib.rs  logging_policy.rs  lts_policy.rs  measurement_model.rs  metrics_contract.rs  observability_contract.rs  operations_model.rs  os_contract.rs  policy_evidence_contract.rs  policy_gate_contract.rs  policy_pack_contract.rs  provenance.rs  regression_matrix.rs  (+18 more)
core/src/evidence/: chain.rs  hashing.rs  mod.rs  proof.rs
crates/aion-cli/: Cargo.toml  build.rs
crates/aion-cli/src/: lib.rs  main.rs  output_bundle.rs  ux.rs
crates/aion-cli/tests/: README.md  cli_flow_test.rs  dist_output.rs  doctor_output.rs  enterprise_output.rs  golden_test.rs  governance_output.rs  help_output.rs  measure_output.rs  ops_output.rs  output_contract.rs  phase3_graph.rs  product_docs.rs  product_examples.rs  product_phase6.rs  product_telemetry.rs  reliability_output.rs  tests_output.rs  ux_output.rs
engine/: Cargo.toml  build.rs
engine/src/: audit.rs  capture.rs  diff.rs  ffi.rs  lib.rs  policy.rs  replay_debug.rs
engine/src/ai/: backend.rs  canon.rs  capsule.rs  drift.rs  events.rs  explain.rs  graph.rs  graph_render.rs  mod.rs  model.rs  replay.rs  replay_render.rs  runtime.rs  trace.rs  why.rs  why_render.rs
engine/src/capsule/: hash.rs  mod.rs
engine/src/ci/: baseline.rs  bundle.rs  failure.rs  meta.rs  mod.rs  runtime.rs  schema.rs
engine/src/enterprise/: mod.rs
engine/src/events/: mod.rs  model.rs  reader.rs  store.rs
engine/src/governance/: audit.rs  (+6 more)
engine/tests/: README.md  ai_explain_v2.rs  ai_replay_v2.rs  c_abi_smoke_test.rs  cross_machine_replay.rs  determinism_phase1.rs  drift_contract_v2.rs  enterprise_features.rs  formal_replay.rs  governance_evidence.rs  governance_v1.rs  output_s8.rs  sdk_v1.rs  syscall_policy.rs
kernel/: Cargo.toml
kernel/src/: env.rs  envelope.rs  execute.rs  fs.rs  lib.rs  network.rs  random.rs  time.rs
(+1761 files in other folders)
