[package]
name = "aion-core"
version = "0.2.0"
edition = "2021"
description = "SealRun — core contracts and capsule format (aion-core crate)"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
ed25519-dalek = "2"
hex = "0.4"
