[package]
name = "aion-engine"
version = "0.2.0"
edition = "2021"
description = "SealRun engine — capture, replay, diff, why, graph, CI (aion-engine crate)"
license = "MIT"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
ffi = ["dep:libc"]
async = ["dep:tokio"]
python-bindings = []

[dependencies]
aion-core = { path = "../core" }
aion-kernel = { path = "../kernel" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
blake3 = "1.5"
toml = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
libc = { version = "0.2", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
ed25519-dalek = "2"
rand = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
