[package]
name = "aion-cli"
version = "0.2.0"
edition = "2021"
description = "AION‑OS — CLI (observe / execute / governance / sdk)"
license = "MIT"
build = "build.rs"

[[bin]]
name = "aion"
path = "src/main.rs"

[[example]]
name = "sdk_capsule_build"
path = "../../examples/sdk/capsule_build.rs"

[[example]]
name = "sdk_replay"
path = "../../examples/sdk/replay.rs"

[[example]]
name = "sdk_drift"
path = "../../examples/sdk/drift.rs"

[[example]]
name = "sdk_governance"
path = "../../examples/sdk/governance.rs"

[dependencies]
aion-core = { path = "../../core" }
aion-engine = { path = "../../engine" }
aion-kernel = { path = "../../kernel" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
ed25519-dalek = "2"
toml = "0.8"
libloading = "0.8"

[dev-dependencies]
regex = "1"
